Work-around for DBus crash due to timers firing on the wrong thread.

BUG=40803
TEST=run browser & use geolocation.

Review URL: http://codereview.chromium.org/1604023

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@44216 0039d316-1c4b-4281-b951-d872f2087c98

Former-commit-id: b7c8da42ebb18611cb23d281a08e12b896152626